--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Feb 27 16:51:00 SGT 2018
-sdk.dir=/Users/nanelia/Library/Android/sdk
+#Tue Feb 27 17:08:34 SGT 2018
+sdk.dir=C\:\\Users\\singy\\AppData\\Local\\Android\\Sdk
