--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Feb 27 20:54:44 SGT 2018
-sdk.dir=C\:\\Users\\User\\AppData\\Local\\Android\\Sdk
+#Thu Mar 01 18:20:26 SGT 2018
+sdk.dir=C\:\\Users\\singy\\AppData\\Local\\Android\\Sdk
