--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,6 @@ dependencies {
     compile 'com.github.rajeefmk:runtimepermissionhandler:1.0.3'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    compile 'com.roger.catloadinglibrary:catloadinglibrary:1.0.1'
 
 }
