--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,5 +44,5 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'com.roger.catloadinglibrary:catloadinglibrary:1.0.1'
-
+    compile 'com.jaredrummler:material-spinner:1.2.4'
 }
