--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.USE_FINGERPRINT"/>
 
     <application
         android:icon="@mipmap/ic_launcher"
@@ -38,6 +39,12 @@
 
         <activity
             android:name="com.walkPark.walkinthepark.activities.GameDetailsActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden"
+            />
+
+        <activity
+            android:name="com.walkPark.walkinthepark.activities.CheckpointActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden"
             />
