--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,5 @@ dependencies {
     compile 'com.jaredrummler:material-spinner:1.2.4'
     compile 'org.altbeacon:android-beacon-library:2+'
     compile 'nl.dionsegijn:konfetti:1.1.0'
+    compile 'com.orhanobut:dialogplus:1.11@aar'
 }
