bug fixes, complete route activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,12 @@
             android:windowSoftInputMode="stateHidden"
             />
 
+        <activity
+            android:name="com.walkPark.walkinthepark.activities.CompleteRouteActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden"
+            />
+
     </application>
 
 </manifest>
